force-app/main/default/objects/Submission_Form__c/fields/Rate_Buydown__c.field-meta.xml
<CustomField>
    <fullName>Rate_Buydown__c</fullName>
    <label>Rate Buydown</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>