force-app/main/default/objects/Submission_Form__c/fields/Rate_lock__c.field-meta.xml
<CustomField>
    <fullName>Rate_lock__c</fullName>
    <label>Rate lock</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Need Lock Requested</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
            <value>
                <fullName>Unlocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>