force-app/main/default/objects/Submission_Form__c/fields/Refinance_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Purpose__c</fullName>
    <label>Refinance Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Out Refinance</fullName>
            </value>
            <value>
                <fullName>Cash-Out Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Rate &amp; Term</fullName>
            </value>
            <value>
                <fullName>Rate And Term Reduction-FHA</fullName>
            </value>
            <value>
                <fullName>Streamline Refinance</fullName>
            </value>
            <value>
                <fullName>VA Interest Rate Reduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>