force-app/main/default/objects/Submission_Form__c/fields/Sellers_Agent__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller&apos;s Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Submission Forms (Seller&apos;s Agent)</relationshipLabel>
    <relationshipName>Submission_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>