force-app/main/default/objects/Submission_Form__c/fields/Sellers_Email__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Email__c</fullName>
    <label>Seller&apos;s Agent Email</label>
    <type>Email</type>
</CustomField>