force-app/main/default/objects/Submission_Form__c/fields/Sellers_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Phone__c</fullName>
    <label>Seller&apos;s Agent Cell Phone</label>
    <type>Phone</type>
</CustomField>