force-app/main/default/objects/Submission_Form__c/fields/Source_of_Funds_to_Close_Multi__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds_to_Close_Multi__c</fullName>
    <label>Source of Funds to Close</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking/Savings</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Net Proceeds from Sale</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>