force-app/main/default/objects/Submission_Form__c/fields/Source_of_Funds_to_Close_Other__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds_to_Close_Other__c</fullName>
    <label>Source of Funds to Close - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>