force-app/main/default/objects/Submission_Form__c/fields/Speaks_Spanish_Only__c.field-meta.xml
<CustomField>
    <fullName>Speaks_Spanish_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speaks Spanish Only</label>
    <type>Checkbox</type>
</CustomField>