force-app/main/default/objects/Submission_Form__c/fields/Term_Num__c.field-meta.xml
<CustomField>
    <fullName>Term_Num__c</fullName>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>