force-app/main/default/objects/Submission_Form__c/fields/Title_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Title_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Submission Forms (Title Company)</relationshipLabel>
    <relationshipName>Submission_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>