force-app/main/default/objects/Submission_Form__c/fields/Title_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Title_Company_Phone__c</fullName>
    <label>Title Company Phone</label>
    <type>Phone</type>
</CustomField>