force-app/main/default/objects/Submission_Form__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Submission Forms</relationshipLabel>
    <relationshipName>Submission_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>