force-app/main/default/objects/Submission_Form__c/fields/Waive_Escrows__c.field-meta.xml
<CustomField>
    <fullName>Waive_Escrows__c</fullName>
    <label>Waive Escrows</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>