force-app/main/default/objects/Submission_Form__c/fields/Waiving_Escrow__c.field-meta.xml
<CustomField>
    <fullName>Waiving_Escrow__c</fullName>
    <label>Waiving Escrow?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>