force-app/main/default/objects/Submission_Form__c/fields/X2nd_Lien__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Lien__c</fullName>
    <label>2nd Lien</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>