force-app/main/default/objects/Submission_Form__c/recordTypes/Loan_Origination_Submission_Form.recordType-meta.xml
<RecordType>
    <fullName>Loan_Origination_Submission_Form</fullName>
    <active>true</active>
    <label>Loan Origination Submission Form</label>
</RecordType>